Update RachioHttp.java